--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <ul class="nav navbar-nav">
                     <li class="nav-item active"><a class="nav-link" href="index.html">Accueil</a></li>
                     <li class="nav-item"><a class="nav-link" href="element-color.html">Couleurs</a></li>
-                    <li class="nav-item"><a class="nav-link" href="element-font.html">Police</a></li>
+                    <li class="nav-item"><a class="nav-link" href="element-font.html">Typographie</a></li>
                 </ul>
             </div>
         </div>
@@ -54,79 +54,211 @@
 
 
     <!-- Page Content -->
-    <section id="presentation">
+    <section class="white-section">
+
+    </section>
+
+    <section class="white-section">
         <div class="container">
 
             <div class="heading">
                 <h2>Quels sont les différents éléments à prendre en compte pour créer un site Web ?</h2>
             </div>
-            <div class="red-divider"></div>
+            <div class="blue-divider"></div>
             <div class="row">
 
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut auctor magna diam, posuere euismod sem accumsan eu. Donec id dolor fringilla, sollicitudin sapien egestas, vulputate lacus. In posuere dictum tortor, sed maximus quam consequat
-                    non. Fusce sit amet lacus at elit ultrices aliquam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vivamus quis metus turpis. Nulla rutrum odio elit, eleifend tempus urna laoreet eget. Etiam
-                    finibus mauris vitae lacus lobortis, sed aliquam ipsum tincidunt. Ut pellentesque vulputate mollis.</p>
+                <div class="blue-text col-xs-12 col-sm-8">
 
-                <p>Praesent consectetur elit vel condimentum volutpat. Nunc sed dapibus nunc. Integer rutrum placerat dolor in rutrum. Vivamus rutrum odio nunc, in consectetur mi elementum nec. Nullam ac imperdiet magna. Nam commodo sit amet nisi ac rutrum.
-                    Aenean nisl purus, ultricies et bibendum eget, ultrices eget ipsum.</p>
+                    <p>Lors de la création d'une page web, il existe de nombreux paramètres à prendre en compte :
+                        <ul>
+                            <li>- Logo</li>
+                            <li>- Menu</li>
+                            <li>- Couleurs</li>
+                            <li>- Typographie</li>
+                            <li>- Contenu</li>
+                            <li>- Images</li>
+                            <li>- Icônes</li>
+                            <li>- Boutons</li>
+                            <li>- Contact</li>
+                            <li>- Footer</li>
+                        </ul>
+                    </p>
 
-                <p>Nunc faucibus neque at risus convallis convallis. Mauris id odio sed arcu lobortis sollicitudin id eu enim. Aliquam gravida sagittis metus in pulvinar. Donec at libero et neque vestibulum viverra vitae sit amet dui. Aenean ultrices hendrerit
-                    libero, non tincidunt est euismod ut. In semper risus risus, eu dictum mauris faucibus eget. Nulla ut commodo justo, ut consequat metus. Phasellus posuere augue ut eleifend blandit. Phasellus tincidunt justo ut tincidunt aliquet. Etiam
-                    maximus molestie lorem at rutrum.
-                </p>
+                    <p>Dans ces paramètres, certains définissent la charte graphique d’une société, d'une marque ou d'un site web :
+                        <ul>
+                            <li>- Couleurs</li>
+                            <li>- Typographie</li>
+                            <li>- Logo</li>
+                            <li>- Icônes</li>
+                            <li>- Boutons</li>
+                        </ul>
+                    </p>
 
-                <p>Vivamus condimentum placerat leo, id sodales dui imperdiet ut. Quisque dignissim semper lobortis. Quisque fringilla augue eu aliquet consequat. Vivamus laoreet diam non libero viverra sollicitudin nec quis metus. Duis nisi turpis, suscipit
-                    sed nulla non, viverra tincidunt lacus. Donec tempus auctor placerat. Proin in egestas tellus. Sed nec justo ut ex varius mollis. Pellentesque mattis dui dui, nec rhoncus erat tincidunt eget. Proin vel ultrices sapien, in ultrices
-                    turpis.
-                </p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut auctor magna diam, posuere euismod sem accumsan eu. Donec id dolor fringilla, sollicitudin sapien egestas, vulputate lacus. In posuere dictum tortor, sed maximus quam consequat
-                    non. Fusce sit amet lacus at elit ultrices aliquam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vivamus quis metus turpis. Nulla rutrum odio elit, eleifend tempus urna laoreet eget. Etiam
-                    finibus mauris vitae lacus lobortis, sed aliquam ipsum tincidunt. Ut pellentesque vulputate mollis.</p>
+                    <p>Nous allons, à travers ce chapitre, nous intéresser à 2 de ces éléments :
+                        <ul>
+                            <li>- Couleurs</li>
+                            <li>- Typographie</li>
+                        </ul>
+                    </p>
 
-                <p>Praesent consectetur elit vel condimentum volutpat. Nunc sed dapibus nunc. Integer rutrum placerat dolor in rutrum. Vivamus rutrum odio nunc, in consectetur mi elementum nec. Nullam ac imperdiet magna. Nam commodo sit amet nisi ac rutrum.
-                    Aenean nisl purus, ultricies et bibendum eget, ultrices eget ipsum.</p>
+                </div>
 
-                <p>Nunc faucibus neque at risus convallis convallis. Mauris id odio sed arcu lobortis sollicitudin id eu enim. Aliquam gravida sagittis metus in pulvinar. Donec at libero et neque vestibulum viverra vitae sit amet dui. Aenean ultrices hendrerit
-                    libero, non tincidunt est euismod ut. In semper risus risus, eu dictum mauris faucibus eget. Nulla ut commodo justo, ut consequat metus. Phasellus posuere augue ut eleifend blandit. Phasellus tincidunt justo ut tincidunt aliquet. Etiam
-                    maximus molestie lorem at rutrum.
-                </p>
+                <div class="col-xs-12 col-sm-4">
 
-                <p>Vivamus condimentum placerat leo, id sodales dui imperdiet ut. Quisque dignissim semper lobortis. Quisque fringilla augue eu aliquet consequat. Vivamus laoreet diam non libero viverra sollicitudin nec quis metus. Duis nisi turpis, suscipit
-                    sed nulla non, viverra tincidunt lacus. Donec tempus auctor placerat. Proin in egestas tellus. Sed nec justo ut ex varius mollis. Pellentesque mattis dui dui, nec rhoncus erat tincidunt eget. Proin vel ultrices sapien, in ultrices
-                    turpis.
-                </p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut auctor magna diam, posuere euismod sem accumsan eu. Donec id dolor fringilla, sollicitudin sapien egestas, vulputate lacus. In posuere dictum tortor, sed maximus quam consequat
-                    non. Fusce sit amet lacus at elit ultrices aliquam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vivamus quis metus turpis. Nulla rutrum odio elit, eleifend tempus urna laoreet eget. Etiam
-                    finibus mauris vitae lacus lobortis, sed aliquam ipsum tincidunt. Ut pellentesque vulputate mollis.</p>
 
-                <p>Praesent consectetur elit vel condimentum volutpat. Nunc sed dapibus nunc. Integer rutrum placerat dolor in rutrum. Vivamus rutrum odio nunc, in consectetur mi elementum nec. Nullam ac imperdiet magna. Nam commodo sit amet nisi ac rutrum.
-                    Aenean nisl purus, ultricies et bibendum eget, ultrices eget ipsum.</p>
+                </div>
 
-                <p>Nunc faucibus neque at risus convallis convallis. Mauris id odio sed arcu lobortis sollicitudin id eu enim. Aliquam gravida sagittis metus in pulvinar. Donec at libero et neque vestibulum viverra vitae sit amet dui. Aenean ultrices hendrerit
-                    libero, non tincidunt est euismod ut. In semper risus risus, eu dictum mauris faucibus eget. Nulla ut commodo justo, ut consequat metus. Phasellus posuere augue ut eleifend blandit. Phasellus tincidunt justo ut tincidunt aliquet. Etiam
-                    maximus molestie lorem at rutrum.
-                </p>
+            </div>
+    </section>
 
-                <p>Vivamus condimentum placerat leo, id sodales dui imperdiet ut. Quisque dignissim semper lobortis. Quisque fringilla augue eu aliquet consequat. Vivamus laoreet diam non libero viverra sollicitudin nec quis metus. Duis nisi turpis, suscipit
-                    sed nulla non, viverra tincidunt lacus. Donec tempus auctor placerat. Proin in egestas tellus. Sed nec justo ut ex varius mollis. Pellentesque mattis dui dui, nec rhoncus erat tincidunt eget. Proin vel ultrices sapien, in ultrices
-                    turpis.
-                </p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut auctor magna diam, posuere euismod sem accumsan eu. Donec id dolor fringilla, sollicitudin sapien egestas, vulputate lacus. In posuere dictum tortor, sed maximus quam consequat
-                    non. Fusce sit amet lacus at elit ultrices aliquam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vivamus quis metus turpis. Nulla rutrum odio elit, eleifend tempus urna laoreet eget. Etiam
-                    finibus mauris vitae lacus lobortis, sed aliquam ipsum tincidunt. Ut pellentesque vulputate mollis.</p>
+    <section class="blue-section">
+        <div class="container">
 
-                <p>Praesent consectetur elit vel condimentum volutpat. Nunc sed dapibus nunc. Integer rutrum placerat dolor in rutrum. Vivamus rutrum odio nunc, in consectetur mi elementum nec. Nullam ac imperdiet magna. Nam commodo sit amet nisi ac rutrum.
-                    Aenean nisl purus, ultricies et bibendum eget, ultrices eget ipsum.</p>
+            <div class="heading">
+                <h2 class="white-heading">Qu'est-ce qu'une charte graphique ?</h2>
+            </div>
+            <div class="white-divider"></div>
+            <div class="row">
 
-                <p>Nunc faucibus neque at risus convallis convallis. Mauris id odio sed arcu lobortis sollicitudin id eu enim. Aliquam gravida sagittis metus in pulvinar. Donec at libero et neque vestibulum viverra vitae sit amet dui. Aenean ultrices hendrerit
-                    libero, non tincidunt est euismod ut. In semper risus risus, eu dictum mauris faucibus eget. Nulla ut commodo justo, ut consequat metus. Phasellus posuere augue ut eleifend blandit. Phasellus tincidunt justo ut tincidunt aliquet. Etiam
-                    maximus molestie lorem at rutrum.
-                </p>
+                <div class="col-xs-12 col-sm-4">
 
-                <p>Vivamus condimentum placerat leo, id sodales dui imperdiet ut. Quisque dignissim semper lobortis. Quisque fringilla augue eu aliquet consequat. Vivamus laoreet diam non libero viverra sollicitudin nec quis metus. Duis nisi turpis, suscipit
-                    sed nulla non, viverra tincidunt lacus. Donec tempus auctor placerat. Proin in egestas tellus. Sed nec justo ut ex varius mollis. Pellentesque mattis dui dui, nec rhoncus erat tincidunt eget. Proin vel ultrices sapien, in ultrices
-                    turpis.
-                </p>
+
+                </div>
+
+                <div class="white-text col-xs-12 col-sm-8">
+
+                    <p>La charte graphique d’un site web, c’est l’ensemble des symboles et des règles qui définissent l’identité graphique d’un site web.</p>
+                    <p>Par extension, on utilise souvent l’expression de charte graphique pour parler de l’ensemble de l’identité
+                        visuelle d’un site web. </p>
+                    <p>L’objectif d’une charte graphique est double.</p>
+                    <p>Il s’agit d’une part d’avoir une cohérence graphique quelle que soit la page du site web, et quel que soit le support de communication utilisé, pour renforcer l’image
+                    de marque et d’autre part de faciliter la navigation et la lecture grâce à l’utilisation de repères visuels constants.</p>
+
+                    <p>C’est le document de base de votre communication et il contient l’ensemble des règles d’utilisation de votre identité visuelle : logo, couleurs, typographies…</p>
+
+                    <p>Une charte graphique de site internet révèle l’état d’esprit, les valeurs, l’image de votre entreprise, organisation ou association. Cette charte permet de donner une cohérence graphique à vos documents, flyers, site internet, cartes de
+                        visite…
+                    </p>
+
+                    <p>Pour un site web, la charte graphique joue un rôle déterminant dans la première impression et la crédibilité de votre site. Il faut y consacrer du temps et des ressources.</p>
+
+                    <p>La charte graphique représente la proposition de valeur, l’image, la personnalité de l’entreprise.</p>
+
+            </div>
+
+            </div>
+
+        </div>
+    </section>
+
+
+    <section class="white-section">
+        <div class="container">
+
+            <div class="heading">
+                <h2>Pourquoi est-il important d’avoir une charte graphique ?</h2>
+            </div>
+            <div class="blue-divider"></div>
+            <div class="row">
+
+                <div class="blue-text col-xs-12 col-sm-8">
+
+                    <p>Votre identité visuelle est un peu comme la personnalité de votre entreprise.</p>
+                    <p>C’est la manière dont le monde vous reconnaît et vous fait confiance.</p>
+                    <p>Si vous changez la manière dont vous vous habillez et la manière dont vous agissez tous les jours, votre entourage n’aura probablement pas l’impression de vous connaître et aura d’autant plus de mal à vous faire confiance.</p>
+
+                    <p>Imaginez que l’un de vos collègues, toujours propre sur lui, mette chaque jour une chemise blanche bien rentrée dans son pantalon et qu’un jour, il arrive au bureau mal rasé avec un jean troué et un énorme tatouage sur le bras. </p>
+                    <p>Cela vous mettrait probablement mal à l’aise, car vous n’avez pas l’habitude de le voir comme ça.</p>
+                    <p>Vous serez peut-être même tenté de lui demander si tout va bien dans sa vie, par inquiétude.</p>
+
+                    <p>C’est la même chose avec votre marque : changer trop souvent d’apparences va semer la confusion auprès de vos clients et probablement, les éloigner de vous.</p>
+                    <p>Une charte graphique est un document important parce qu’il vous aide à rester cohérent quel que soit le médium que vous utilisez.</p>
+
+                </div>
+
+                <div class="col-xs-12 col-sm-4">
+
+
+                </div>
+
+            </div>
+
+        </div>
+    </section>
+
+    <section class="blue-section">
+        <div class="container">
+
+            <div class="heading">
+                <h2 class="white-heading">La palette de couleurs</h2>
+            </div>
+            <div class="white-divider"></div>
+            <div class="row white-text">
+
+                <p>Il est judicieux de définir la palette de couleur qui correspond à l’identité de votre marque.</p>
+
+                <p>La plupart des marques choisissent quatre couleurs au plus et ne s’éloignent pas trop des couleurs de leur logo.</p>
+
+                <p>Vous pouvez par exemple choisir une couleur claire pour les fonds, une couleur plus foncée pour le texte, une couleur neutre et une dernière couleur qui ressort par rapport aux autres.</p>
+
+                <a href="element-color.html" class="button1">Voir <i class="fas fa-arrow-alt-circle-right"></i></a>
+
+            </div>
+
+        </div>
+    </section>
+
+    <section class="white-section">
+        <div class="container">
+
+            <div class="heading">
+                <h2>La typographie</h2>
+            </div>
+            <div class="blue-divider"></div>
+            <div class="row blue-text">
+
+                <p>Encore un aspect essentiel de l’identité de votre marque : les polices de caractères.</p>
+
+                <p>Utiliser trop de typographies différentes sur un même document est aussi contre-productif que d’allier trop de couleurs.</p>
+                <p>Il vaut mieux se concentrer sur 2 ou 3 polices différentes.</p>
+                <p>Par contre, rien n’interdit de varier la taille, l’épaisseur, voire la couleur des blocs de texte.</p>
+                <p>On obtient ainsi un texte dynamique, mais harmonieux.</p>
+
+                <p>De manière générale, on utilise une police différente pour son logo et pour le reste, de sorte à créer un contraste.</p>
+
+                <a href="element-font.html" class="button2">Voir <i class="fas fa-arrow-alt-circle-right"></a>
+
+            </div>
+
+        </div>
+    </section>
+
+    <section class="blue-section">
+        <div class="container">
+
+            <div class="heading">
+                <h2 class="white-heading">Vous êtes maintenant prêts à créer votre charte graphique</h2>
+            </div>
+            <div class="white-divider"></div>
+            <div class="row white-text">
+
+                <p>Votre entreprise est bien plus que les produits que vous vendez et les services que vous proposez.</p>
+                <p>Une image de marque forte et bien définie vous permettra de vous démarquer de vos concurrents. </p>
+                <p>Votre charte graphique explique clairement à votre équipe comment accomplir cela.</p>
+
+                <p>Les chartes graphiques ne sont pas tous des pavés infinissables.</p>
+                </p>Certains tiennent même en une seule page.</p>
+                </p>Tout dépend de votre entreprise et de ses besoins.</p>
+                </p>L’important est qu’il renferme toutes les informations pertinentes à votre marque
+                    qui serviront ensuite de références pour tous vos projets à venir.</p>
+
+                <p>Votre charte graphique n’est pas figée pour toujours et à jamais.</p>
+                <p>Il va évoluer au fur et à mesure que votre entreprise évolue et vous y reviendrez pour ajuster ou ajouter des informations de temps en temps.</p>
+                <p>Le plus important est de commencer sur des bases solides avec un guide bien construit dès le départ.</p>
+
+                <p>Cependant vous n’allez pas le changer tous les deux jours non plus.</p>
+
+                <a href="element-color.html" class="button1">Commencer <i class="fas fa-arrow-alt-circle-right"></a>
 
             </div>
 
