page index - textes et images finalisés

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet" type="text/css">
@@ -103,8 +103,9 @@
 
                 </div>
 
-                <div class="col-xs-12 col-sm-4">
+                <div class="col-xs-12 col-sm-4 block-visuel">
 
+                    <img src="images/bandeaux/index1.jpg" class="align-content-center" alt="site web">
 
                 </div>
 
@@ -120,31 +121,29 @@
             <div class="white-divider"></div>
             <div class="row">
 
-                <div class="col-xs-12 col-sm-4">
+                <div class="col-xs-12 col-sm-4 block-visuel">
 
+                    <img src="images/bandeaux/index2.jpg" alt="site web">
 
                 </div>
 
                 <div class="white-text col-xs-12 col-sm-8">
 
                     <p>La charte graphique d’un site web, c’est l’ensemble des symboles et des règles qui définissent l’identité graphique d’un site web.</p>
-                    <p>Par extension, on utilise souvent l’expression de charte graphique pour parler de l’ensemble de l’identité
-                        visuelle d’un site web. </p>
-                    <p>L’objectif d’une charte graphique est double.</p>
-                    <p>Il s’agit d’une part d’avoir une cohérence graphique quelle que soit la page du site web, et quel que soit le support de communication utilisé, pour renforcer l’image
-                    de marque et d’autre part de faciliter la navigation et la lecture grâce à l’utilisation de repères visuels constants.</p>
-
                     <p>C’est le document de base de votre communication et il contient l’ensemble des règles d’utilisation de votre identité visuelle : logo, couleurs, typographies…</p>
+                    <br>
 
-                    <p>Une charte graphique de site internet révèle l’état d’esprit, les valeurs, l’image de votre entreprise, organisation ou association. Cette charte permet de donner une cohérence graphique à vos documents, flyers, site internet, cartes de
-                        visite…
-                    </p>
+                    <p>L’objectif d’une charte graphique est double.</p>
+                    <p>Il s’agit d’une part d’avoir une cohérence graphique quelle que soit la page du site web, et quel que soit le support de communication utilisé, pour renforcer l’image de marque et d’autre part de faciliter la navigation et la lecture
+                        grâce à l’utilisation de repères visuels constants.</p>
+                    <br>
+
+                    <p>Une charte graphique de site internet révèle l’état d’esprit, les valeurs, l’image de votre entreprise, organisation ou association. Cette charte permet de donner une cohérence graphique à vos documents, flyers, site internet, cartes
+                        de visite…</p>
 
                     <p>Pour un site web, la charte graphique joue un rôle déterminant dans la première impression et la crédibilité de votre site. Il faut y consacrer du temps et des ressources.</p>
 
-                    <p>La charte graphique représente la proposition de valeur, l’image, la personnalité de l’entreprise.</p>
-
-            </div>
+                </div>
 
             </div>
 
@@ -166,18 +165,21 @@
                     <p>Votre identité visuelle est un peu comme la personnalité de votre entreprise.</p>
                     <p>C’est la manière dont le monde vous reconnaît et vous fait confiance.</p>
                     <p>Si vous changez la manière dont vous vous habillez et la manière dont vous agissez tous les jours, votre entourage n’aura probablement pas l’impression de vous connaître et aura d’autant plus de mal à vous faire confiance.</p>
+                    <br>
 
                     <p>Imaginez que l’un de vos collègues, toujours propre sur lui, mette chaque jour une chemise blanche bien rentrée dans son pantalon et qu’un jour, il arrive au bureau mal rasé avec un jean troué et un énorme tatouage sur le bras. </p>
                     <p>Cela vous mettrait probablement mal à l’aise, car vous n’avez pas l’habitude de le voir comme ça.</p>
                     <p>Vous serez peut-être même tenté de lui demander si tout va bien dans sa vie, par inquiétude.</p>
+                    <br>
 
                     <p>C’est la même chose avec votre marque : changer trop souvent d’apparences va semer la confusion auprès de vos clients et probablement, les éloigner de vous.</p>
                     <p>Une charte graphique est un document important parce qu’il vous aide à rester cohérent quel que soit le médium que vous utilisez.</p>
 
                 </div>
 
-                <div class="col-xs-12 col-sm-4">
+                <div class="col-xs-12 col-sm-4 block-visuel">
 
+                    <img src="images/bandeaux/index3.jpg" alt="site web">
 
                 </div>
 
@@ -193,15 +195,28 @@
                 <h2 class="white-heading">La palette de couleurs</h2>
             </div>
             <div class="white-divider"></div>
-            <div class="row white-text">
+            <div class="row">
 
-                <p>Il est judicieux de définir la palette de couleur qui correspond à l’identité de votre marque.</p>
+                <div class="white-text col-xs-12 col-sm-8">
 
-                <p>La plupart des marques choisissent quatre couleurs au plus et ne s’éloignent pas trop des couleurs de leur logo.</p>
+                    <p>Il est judicieux de définir la palette de couleur qui correspond à l’identité de votre marque.</p>
+                    <br>
 
-                <p>Vous pouvez par exemple choisir une couleur claire pour les fonds, une couleur plus foncée pour le texte, une couleur neutre et une dernière couleur qui ressort par rapport aux autres.</p>
+                    <p>La plupart des marques choisissent quatre couleurs au plus et ne s’éloignent pas trop des couleurs de leur logo.</p>
+                    <br>
 
-                <a href="element-color.html" class="button1">Voir <i class="fas fa-arrow-alt-circle-right"></i></a>
+                    <p>Vous pouvez par exemple choisir une couleur claire pour les fonds, une couleur plus foncée pour le texte, une couleur neutre et une dernière couleur qui ressort par rapport aux autres.</p>
+                    <br><br>
+
+                    <a href="element-color.html" class="button1">Voir <i class="fas fa-arrow-alt-circle-right"></i></a>
+
+                </div>
+
+                <div class="col-xs-12 col-sm-4 block-visuel">
+
+                    <img src="images/bandeaux/index4.jpg" alt="site web">
+
+                </div>
 
             </div>
 
@@ -215,18 +230,31 @@
                 <h2>La typographie</h2>
             </div>
             <div class="blue-divider"></div>
-            <div class="row blue-text">
+            <div class="row">
 
-                <p>Encore un aspect essentiel de l’identité de votre marque : les polices de caractères.</p>
+                <div class="col-xs-12 col-sm-4 block-visuel">
 
-                <p>Utiliser trop de typographies différentes sur un même document est aussi contre-productif que d’allier trop de couleurs.</p>
-                <p>Il vaut mieux se concentrer sur 2 ou 3 polices différentes.</p>
-                <p>Par contre, rien n’interdit de varier la taille, l’épaisseur, voire la couleur des blocs de texte.</p>
-                <p>On obtient ainsi un texte dynamique, mais harmonieux.</p>
+                    <img src="images/bandeaux/index5.jpg" alt="site web">
 
-                <p>De manière générale, on utilise une police différente pour son logo et pour le reste, de sorte à créer un contraste.</p>
+                </div>
 
-                <a href="element-font.html" class="button2">Voir <i class="fas fa-arrow-alt-circle-right"></a>
+                <div class="blue-text col-xs-12 col-sm-8">
+
+                    <p>Encore un aspect essentiel de l’identité de votre marque : les polices de caractères.</p>
+                    <br>
+
+                    <p>Utiliser trop de typographies différentes sur un même document est aussi contre-productif que d’allier trop de couleurs.</p>
+                    <p>Il vaut mieux se concentrer sur 2 ou 3 polices différentes.</p>
+                    <p>Par contre, rien n’interdit de varier la taille, l’épaisseur, voire la couleur des blocs de texte.</p>
+                    <p>On obtient ainsi un texte dynamique, mais harmonieux.</p>
+                    <br>
+
+                    <p>De manière générale, on utilise une police différente pour son logo et pour le reste, de sorte à créer un contraste.</p>
+                    <br><br>
+
+                    <a href="element-font.html" class="button2">Voir <i class="fas fa-arrow-alt-circle-right"></i></a>
+
+                </div>
 
             </div>
 
@@ -245,20 +273,24 @@
                 <p>Votre entreprise est bien plus que les produits que vous vendez et les services que vous proposez.</p>
                 <p>Une image de marque forte et bien définie vous permettra de vous démarquer de vos concurrents. </p>
                 <p>Votre charte graphique explique clairement à votre équipe comment accomplir cela.</p>
+                <br>
 
                 <p>Les chartes graphiques ne sont pas tous des pavés infinissables.</p>
                 </p>Certains tiennent même en une seule page.</p>
                 </p>Tout dépend de votre entreprise et de ses besoins.</p>
-                </p>L’important est qu’il renferme toutes les informations pertinentes à votre marque
-                    qui serviront ensuite de références pour tous vos projets à venir.</p>
+                </p>L’important est qu’il renferme toutes les informations pertinentes à votre marque qui serviront ensuite de références pour tous vos projets à venir.</p>
+                <br>
 
                 <p>Votre charte graphique n’est pas figée pour toujours et à jamais.</p>
                 <p>Il va évoluer au fur et à mesure que votre entreprise évolue et vous y reviendrez pour ajuster ou ajouter des informations de temps en temps.</p>
                 <p>Le plus important est de commencer sur des bases solides avec un guide bien construit dès le départ.</p>
+                <br>
 
                 <p>Cependant vous n’allez pas le changer tous les deux jours non plus.</p>
+                <br><br>
 
-                <a href="element-color.html" class="button1">Commencer <i class="fas fa-arrow-alt-circle-right"></a>
+                <a href="element-color.html" class="button1">Commencer <i class="fas fa-arrow-alt-circle-right"></i></a>
+                <br>
 
             </div>
 
